[gd_scene load_steps=5 format=2]

[ext_resource path="res://minesweeper/CameraController.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://LoseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://minesweeper/MinesweeperGui.tscn" type="PackedScene" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LoseMenu" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_smoothed = true
editor_draw_limits = true

[node name="MinesweeperGui" parent="." instance=ExtResource( 7 )]

[node name="CameraController" parent="." instance=ExtResource( 1 )]
camera_path = NodePath("../Camera2D")

[connection signal="lose" from="MinesweeperGui" to="." method="_on_MinesweeperGui_lose"]
[connection signal="won" from="MinesweeperGui" to="." method="_on_MinesweeperGui_won"]
